--- a/index.html
+++ b/index.html
@@ -46,9 +46,60 @@
 
         <!-- Drawer -->
         <div class="drawer" id="drawer">
-          <div class="header"><span id="close">X</span> Drawer Header</div>
-          <div class="content">This is the drawer content.</div>
-          <div class="footer">Drawer Footer</div>
+          <div class="header">
+            <span> <img src="./Assets/logo.png" alt="" /> </span
+            ><img
+              src="./Assets/menuclose.png"
+              alt=""
+              id="close"
+              class="menu-close"
+            />
+          </div>
+          <div class="content">
+            <ul>
+              <li><a href="#">Tyndis Experience </a></li>
+              <li><a href="#">Workation</a></li>
+              <li><a href="#"> Learn New Skill</a></li>
+              <li><a href="#"> Sustainability </a></li>
+              <li><a href="#"> Tyndis Homes </a></li>
+              <li><a href="#"> Contact Us </a></li>
+            </ul>
+          </div>
+          <div class="footer">
+            <div
+              style="
+                display: flex;
+                gap: 20px;
+                margin-block: 10px;
+                justify-content: center;
+              "
+            >
+              <a href="">
+                <img
+                  src="./Assets/fb.png"
+                  style="width: 18px; height: 18px; object-fit: cover"
+                  alt=""
+              /></a>
+              <a href="">
+                <img
+                  src="./Assets/insta.png"
+                  style="width: 18px; height: 18px"
+                  alt=""
+              /></a>
+              <a href="">
+                <img
+                  src="./Assets/linkdin.png"
+                  style="width: 18px; height: 18px"
+                  alt=""
+              /></a>
+              <a href="">
+                <img
+                  src="./Assets/twitter.png"
+                  style="width: 18px; height: 18px"
+                  alt=""
+              /></a>
+            </div>
+          </div>
         </div>
 
         <!-- Background -->
@@ -554,7 +605,7 @@
                       type specimen book
                     </p>
 
-                    <p>
+                    <p class="effort-para2">
                       Lorem Ipsum is simply dummy text of the printing and
                       typesetting industry. Lorem Ipsum has been the industry's
                       standard dummy text ever since the 1500s, when an unknown
@@ -590,7 +641,7 @@
                       type specimen book
                     </p>
 
-                    <p>
+                    <p class="effort-para2">
                       Lorem Ipsum is simply dummy text of the printing and
                       typesetting industry. Lorem Ipsum has been the industry's
                       standard dummy text ever since the 1500s, when an unknown
@@ -793,26 +844,30 @@
           <div class="footer-column">
             <h3>Connect With Us</h3>
             <div style="display: flex; gap: 40px; margin-block: 20px">
-              <img
-                src="./Assets/fb.png"
-                style="width: 24px; height: 24px; object-fit: cover"
-                alt=""
-              />
-              <img
-                src="./Assets/insta.png"
-                style="width: 24px; height: 24px"
-                alt=""
-              />
-              <img
-                src="./Assets/linkdin.png"
-                style="width: 24px; height: 24px"
-                alt=""
-              />
-              <img
-                src="./Assets/twitter.png"
-                style="width: 24px; height: 24px"
-                alt=""
-              />
+              <a href="">
+                <img
+                  src="./Assets/fb.png"
+                  style="width: 18px; height: 18px; object-fit: cover"
+                  alt=""
+              /></a>
+              <a href="">
+                <img
+                  src="./Assets/insta.png"
+                  style="width: 18px; height: 18px"
+                  alt=""
+              /></a>
+              <a href="">
+                <img
+                  src="./Assets/linkdin.png"
+                  style="width: 18px; height: 18px"
+                  alt=""
+              /></a>
+              <a href="">
+                <img
+                  src="./Assets/twitter.png"
+                  style="width: 18px; height: 18px"
+                  alt=""
+              /></a>
             </div>
 
             <div>
