--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     ></script>
 
     <link rel="stylesheet" href="./Assets/css/Home.css" />
-    <title>Hero and Background</title>
+    <title>Tyndis</title>
   </head>
   <body>
     <div>
