tyndis v3 left right spacing adjusted

--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
 
       <footer class="footer">
         <div class="footer-content">
-          <div class="footer-column">
+          <div class="footer-column first-column ">
             <h3>Connect With Us</h3>
             <div style="display: flex; gap: 40px; margin-block: 20px">
               <a href="">
@@ -922,7 +922,8 @@
             <ul>
               <li><a href="#">Curated Tours </a></li>
               <li><a href="#"> Blogs</a></li>
-              <li><a href="#"> MICE-Business Travel</a></li>
+              <li><a href="#"> MICE-Business  </a></li>
+              <li><a href="#"> Travel</a></li>
               <li><a href="#"> Vlogs</a></li>
               <li><a href="#">Enquiry</a></li>
             </ul>
