tyndis v3 left right spacing adjusted

--- a/index.html
+++ b/index.html
@@ -714,12 +714,7 @@
                 <div class="blog-content">
                   <p class="blog-auther">
                     Sujith Narayanan
-                    <span
-                      style="
-                        color: rgba(24, 24, 24, 0.5);
-                        font-size: 18px;
-                        margin-left: 5px;
-                      "
+                    <span style="color: rgba(24, 24, 24, 0.5); font-size: 18px"
                       >13 Dec 2018</span
                     >
                   </p>
@@ -737,12 +732,7 @@
                 <div class="blog-content">
                   <p class="blog-auther">
                     Sujith Narayanan
-                    <span
-                      style="
-                        color: rgba(24, 24, 24, 0.5);
-                        font-size: 18px;
-                        margin-left: 5px;
-                      "
+                    <span style="color: rgba(24, 24, 24, 0.5); font-size: 18px"
                       >13 Dec 2018</span
                     >
                   </p>
@@ -759,12 +749,7 @@
                 <div class="blog-content">
                   <p class="blog-auther">
                     Sujith Narayanan
-                    <span
-                      style="
-                        color: rgba(24, 24, 24, 0.5);
-                        font-size: 18px;
-                        margin-left: 5px;
-                      "
+                    <span style="color: rgba(24, 24, 24, 0.5); font-size: 18px"
                       >13 Dec 2018</span
                     >
                   </p>
@@ -781,12 +766,7 @@
                 <div class="blog-content">
                   <p class="blog-auther">
                     Sujith Narayanan
-                    <span
-                      style="
-                        color: rgba(24, 24, 24, 0.5);
-                        font-size: 18px;
-                        margin-left: 5px;
-                      "
+                    <span style="color: rgba(24, 24, 24, 0.5); font-size: 18px"
                       >13 Dec 2018</span
                     >
                   </p>
@@ -803,12 +783,7 @@
                 <div class="blog-content">
                   <p class="blog-auther">
                     Sujith Narayanan
-                    <span
-                      style="
-                        color: rgba(24, 24, 24, 0.5);
-                        font-size: 18px;
-                        margin-left: 5px;
-                      "
+                    <span style="color: rgba(24, 24, 24, 0.5); font-size: 18px"
                       >13 Dec 2018</span
                     >
                   </p>
@@ -841,7 +816,7 @@
 
       <footer class="footer">
         <div class="footer-content">
-          <div class="footer-column first-column ">
+          <div class="footer-column first-column">
             <h3>Connect With Us</h3>
             <div style="display: flex; gap: 40px; margin-block: 20px">
               <a href="">
@@ -922,7 +897,7 @@
             <ul>
               <li><a href="#">Curated Tours </a></li>
               <li><a href="#"> Blogs</a></li>
-              <li><a href="#"> MICE-Business  </a></li>
+              <li><a href="#"> MICE-Business </a></li>
               <li><a href="#"> Travel</a></li>
               <li><a href="#"> Vlogs</a></li>
               <li><a href="#">Enquiry</a></li>
