tyndis v3 left right spacing adjusted

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <link rel="stylesheet" href="./Assets/css/Home.css" />
+    <link rel="stylesheet" href="./Assets/css/Home.css?v=1.0" />
     <title>Tyndis</title>
   </head>
   <body>
@@ -939,9 +939,9 @@
     <!-- <script src="../../assets/js/helpers/hs.slick-carousel.js"></script> -->
 
     <!-- slider js -->
-    <script type="text/javascript" src="./Assets/js/Slider.js"></script>
+    <script type="text/javascript" src="./Assets/js/Slider.js?v=1.0"></script>
 
     <!-- count up js -->
-    <script type="text/javascript" src="./Assets/js//Counter.js"></script>
+    <script type="text/javascript" src="./Assets/js/Counter.js"></script>
   </body>
 </html>
