stack card on scroll in sustainable section

--- a/index.html
+++ b/index.html
@@ -578,77 +578,111 @@
               class="effortcontentbg-img"
               alt=""
             />
+            <img src="./Assets/effortbg1.png" class="effortbg-img" alt="" />
 
-            <div class="effort-slider">
-              <div>
-                <div class="effort-card">
-                  <img
-                    src="./Assets/effortgrid.png"
-                    class="effortgrid-img"
-                    alt=""
-                  />
-                  <img
-                    src="./Assets/effortcardimg.png"
-                    class="effortcard-img"
-                    alt=""
-                  />
-                  <div class="effort-card-content">
-                    <h4>
-                      Local Community <br />
-                      engagement
-                    </h4>
-                    <p>
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting industry. Lorem Ipsum has been the industry's
-                      standard dummy text ever since the 1500s, when an unknown
-                      printer took a galley of type and scrambled it to make a
-                      type specimen book
-                    </p>
+            <div class="stack-cards js-stack-cards">
+              <div class="effort-card stack-cards__item js-stack-cards__item">
+                <img
+                  src="./Assets/effortgrid.png"
+                  class="effortgrid-img"
+                  alt=""
+                />
+                <img
+                  src="./Assets/effortcardimg.png"
+                  class="effortcard-img"
+                  alt=""
+                />
 
-                    <p class="effort-para2">
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting industry. Lorem Ipsum has been the industry's
-                      standard dummy text ever since the 1500s, when an unknown
-                      printer took a galley of type and scrambled it to make a
-                      type specimen book
-                    </p>
-                  </div>
+                <div class="effort-card-content">
+                  <h4>
+                    Local Community <br />
+                    engagement
+                  </h4>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a
+                    type specimen book
+                  </p>
+
+                  <p class="effort-para2">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a
+                    type specimen book
+                  </p>
                 </div>
               </div>
 
-              <div>
-                <div class="effort-card">
-                  <img
-                    src="./Assets/effortgrid.png"
-                    class="effortgrid-img"
-                    alt=""
-                  />
-                  <img
-                    src="./Assets/effortcardimg.png"
-                    class="effortcard-img"
-                    alt=""
-                  />
-                  <div class="effort-card-content">
-                    <h4>
-                      Local Community <br />
-                      engagement
-                    </h4>
-                    <p>
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting industry. Lorem Ipsum has been the industry's
-                      standard dummy text ever since the 1500s, when an unknown
-                      printer took a galley of type and scrambled it to make a
-                      type specimen book
-                    </p>
+              <div class="effort-card stack-cards__item js-stack-cards__item">
+                <img
+                  src="./Assets/effortgrid.png"
+                  class="effortgrid-img"
+                  alt=""
+                />
+                <img
+                  src="./Assets/effortcardimg.png"
+                  class="effortcard-img"
+                  alt=""
+                />
 
-                    <p class="effort-para2">
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting industry. Lorem Ipsum has been the industry's
-                      standard dummy text ever since the 1500s, when an unknown
-                      printer took a galley of type and scrambled it to make a
-                      type specimen book
-                    </p>
-                  </div>
+                <div class="effort-card-content">
+                  <h4>
+                    Local Community <br />
+                    engagement
+                  </h4>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a
+                    type specimen book
+                  </p>
+
+                  <p class="effort-para2">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a
+                    type specimen book
+                  </p>
+                </div>
+              </div>
+
+              <div class="effort-card stack-cards__item js-stack-cards__item">
+                <img
+                  src="./Assets/effortgrid.png"
+                  class="effortgrid-img"
+                  alt=""
+                />
+                <img
+                  src="./Assets/effortcardimg.png"
+                  class="effortcard-img"
+                  alt=""
+                />
+
+                <div class="effort-card-content">
+                  <h4>
+                    Local Community <br />
+                    engagement
+                  </h4>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a
+                    type specimen book
+                  </p>
+
+                  <p class="effort-para2">
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a galley of type and scrambled it to make a
+                    type specimen book
+                  </p>
                 </div>
               </div>
             </div>
@@ -943,5 +977,6 @@
 
     <!-- count up js -->
     <script type="text/javascript" src="./Assets/js/Counter.js"></script>
+    <script type="text/javascript" src="./Assets/js/stack-card.js"></script>
   </body>
 </html>
