bg images evenised opacity

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <link rel="stylesheet" href="./Assets/css/Home.css?v=1.5" />
+    <link rel="stylesheet" href="./Assets/css/Home.css?v=1.6" />
     <title>Tyndis</title>
   </head>
   <body>
@@ -977,6 +977,6 @@
 
     <!-- count up js -->
     <script type="text/javascript" src="./Assets/js/Counter.js"></script>
-    <script type="text/javascript" src="./Assets/js/stack-card.js"></script>
+    <script type="text/javascript" src="./Assets/js/stack-card.js?v=1.1"></script>
   </body>
 </html>
