logo added,scroll nav and view btn added and resposive changes

--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
 
       <div class="container">
         <!-- Navbar -->
-        <div class="navbar">
-          <div class="logo">LOGO</div>
-          <div class="hamburger" id="hamburger">
-            <img src="./Assets/menu.png" />
+        <div class="navbar" id="navbar">
+          <div class="nav-content">
+            <div class="logo">
+              <img src="./Assets/tyndiswhitelogo.png" alt="" />
+            </div>
+            <div class="hamburger" id="hamburger">
+              <img src="./Assets/menu.png" />
+            </div>
           </div>
         </div>
-
         <!-- Backdrop -->
         <div class="backdrop" id="backdrop"></div>
 
@@ -48,8 +51,12 @@
         <div class="drawer" id="drawer">
           <div class="header">
             <span class="drawer-logo">
-              <img src="./Assets/logo.png" alt="" />
-              <img src="./Assets/treemonk.png" alt="" /></span
+              <img src="./Assets/logo.png" alt="" class="tyndis-logo" />
+              <img
+                src="./Assets/treemonk.png"
+                alt=""
+                class="treemonk-logo"
+                style="width: 150px" /></span
             ><img
               src="./Assets/menuclose.png"
               alt=""
@@ -206,7 +213,7 @@
         <div class="experience">
           <div class="exp-slider">
             <div class="exp-content">
-              <p class="exp-title">DISCOVER THE</p>
+              <!-- <p class="exp-title">DISCOVER THE</p> -->
               <h3 class="exp-sub-title">Tyndis Experiences</h3>
             </div>
 
@@ -425,7 +432,7 @@
       <section>
         <div class="int-package">
           <div class="int-content">
-            <p class="int-title">DISCOVER</p>
+            <!-- <p class="int-title">DISCOVER</p> -->
             <h3 class="int-sub-title">International Packages</h3>
 
             <div class="int-sliders">
@@ -501,7 +508,7 @@
       <section>
         <div class="tree-monks">
           <div class="monk-content">
-            <p class="int-title">DISCOVER</p>
+            <!-- <p class="int-title">DISCOVER</p> -->
             <h3 class="int-sub-title">TreeMonks</h3>
 
             <div class="monk-card">
@@ -815,6 +822,9 @@
               </div>
             </a>
           </div>
+        </div>
+        <div class="btn-container">
+          <a href="#" class="view-btn"> View All </a>
         </div>
       </section>
 
