sustainability slider image size changed

--- a/index.html
+++ b/index.html
@@ -592,11 +592,13 @@
 
             <div class="stack-cards js-stack-cards">
               <div class="effort-card stack-cards__item js-stack-cards__item">
-                <img
-                  src="./Assets/effortcardimg.png"
-                  class="effortcard-img"
-                  alt=""
-                />
+                <div class="effort-img-container">
+                  <img
+                    src="./Assets/effortcardimg.png"
+                    class="effortcard-img"
+                    alt=""
+                  />
+                </div>
 
                 <div class="effort-card-content">
                   <h4>
@@ -622,12 +624,13 @@
               </div>
 
               <div class="effort-card stack-cards__item js-stack-cards__item">
-                <img
-                  src="./Assets/effortcardimg.png"
-                  class="effortcard-img"
-                  alt=""
-                />
-
+                <div class="effort-img-container">
+                  <img
+                    src="./Assets/effortcardimg.png"
+                    class="effortcard-img"
+                    alt=""
+                  />
+                </div>
                 <div class="effort-card-content">
                   <h4>
                     Local Community <br />
@@ -652,12 +655,13 @@
               </div>
 
               <div class="effort-card stack-cards__item js-stack-cards__item">
-                <img
-                  src="./Assets/effortcardimg.png"
-                  class="effortcard-img"
-                  alt=""
-                />
-
+                <div class="effort-img-container"> 
+                  <img
+                    src="./Assets/effortcardimg.png"
+                    class="effortcard-img"
+                    alt=""
+                  />
+                </div>
                 <div class="effort-card-content">
                   <h4>
                     Local Community <br />
