video tag palayinline

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <img
               id="playPauseBtn"
               class="play-pause"
-              src="./Assets/play_icon.png"
+              src="./Assets/pause_icon.png"
               alt="Play"
             />
           </div>
