treemonk section design change

--- a/index.html
+++ b/index.html
@@ -512,15 +512,16 @@
             <h3 class="int-sub-title">TreeMonks</h3>
 
             <div class="monk-card">
+              <img src="./Assets/treemonklogo.png" alt="" class="monk-card-logo">
               <div class="card-left">
-                <img src="./Assets/monk-insta.png" alt="" />
-
-                <h3>
-                  Join With Our <br />
-                  Journey
-                </h3>
-
-                <a href="">Follow Instagram</a>
+                <p class="card-left-intro">INTRODUCING</p>
+                <h3>TreeMonks</h3>
+                <p class="card-left-desc"> TreeMonks showcase a vast collection of truly unique escapes
+                you would want to pack your bags and step out to. We customize
+                tour packages as per the guest choice of travel like honeymoon,
+                family, solo, workation & staycation.</p> 
+                <p><a href="">View More</a></p>
+                
               </div>
 
               <div class="monk-right">
@@ -655,7 +656,7 @@
               </div>
 
               <div class="effort-card stack-cards__item js-stack-cards__item">
-                <div class="effort-img-container"> 
+                <div class="effort-img-container">
                   <img
                     src="./Assets/effortcardimg.png"
                     class="effortcard-img"
