volume control added

--- a/index.html
+++ b/index.html
@@ -126,12 +126,21 @@
               <div class="dot" data-index="1"></div>
               <div class="dot" data-index="2"></div>
             </div>
-            <img
-              id="playPauseBtn"
-              class="play-pause"
-              src="./Assets/pause_icon.png"
-              alt="Play"
-            />
+
+            <div class="control-btns">
+              <img
+                id="volumeBtn"
+                class="volume-btn play-pause"
+                src="./Assets/unmute.png"
+                alt="Play"
+              />
+              <img
+                id="playPauseBtn"
+                class="play-pause"
+                src="./Assets/pause_icon.png"
+                alt="Play"
+              />
+            </div>
           </div>
         </div>
       </div>
@@ -512,16 +521,21 @@
             <h3 class="int-sub-title">TreeMonks</h3>
 
             <div class="monk-card">
-              <img src="./Assets/treemonklogo.png" alt="" class="monk-card-logo">
+              <img
+                src="./Assets/treemonklogo.png"
+                alt=""
+                class="monk-card-logo"
+              />
               <div class="card-left">
                 <p class="card-left-intro">INTRODUCING</p>
                 <h3>TreeMonks</h3>
-                <p class="card-left-desc"> TreeMonks showcase a vast collection of truly unique escapes
-                you would want to pack your bags and step out to. We customize
-                tour packages as per the guest choice of travel like honeymoon,
-                family, solo, workation & staycation.</p> 
+                <p class="card-left-desc">
+                  TreeMonks showcase a vast collection of truly unique escapes
+                  you would want to pack your bags and step out to. We customize
+                  tour packages as per the guest choice of travel like
+                  honeymoon, family, solo, workation & staycation.
+                </p>
                 <p><a href="">View More</a></p>
-                
               </div>
 
               <div class="monk-right">
