about page added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
           <div class="content">
             <ul>
-              <li><a href="#">Tyndis Experience </a></li>
+              <li><a href="/about.html">Tyndis Experience </a></li>
               <li><a href="#">Workation</a></li>
               <li><a href="#"> Learn New Skill</a></li>
               <li><a href="#"> Sustainability </a></li>
