aboublog and exp page added

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           <div class="content">
             <ul>
               <li><a href="/about.html">Tyndis Experience </a></li>
-              <li><a href="#">Workation</a></li>
-              <li><a href="#"> Learn New Skill</a></li>
+              <li><a href="/blogs.html">Workation</a></li>
+              <li><a href="/exp.html"> Learn New Skill</a></li>
               <li><a href="#"> Sustainability </a></li>
               <li><a href="#"> Tyndis Homes </a></li>
               <li><a href="#"> Contact Us </a></li>
