mentor style updated

--- a/about.html
+++ b/about.html
@@ -524,6 +524,7 @@
       .mentor-item img {
         width: 205px;
         height: 205px;
+        border-radius: 100%;
         object-fit: cover;
       }
 
@@ -982,7 +983,9 @@
                 <div style="display: flex; align-items: center">
                   <p class="sts-number count-num" style="width: 38px">100</p>
                   <p class="sts-val count-num">+</p>
-                  <p style="font-size: 14px">Five Star Reviews</p>
+                  <p style="font-size: 14px; margin-left: 5px">
+                    Five Star Reviews
+                  </p>
                 </div>
 
                 <img
@@ -1004,7 +1007,9 @@
                 <div style="display: flex; align-items: center">
                   <p class="sts-number count-num" style="width: 28px">70</p>
                   <p class="sts-val count-num">+</p>
-                  <p style="font-size: 14px">Five Star Reviews</p>
+                  <p style="font-size: 14px; margin-left: 5px">
+                    Five Star Reviews
+                  </p>
                 </div>
 
                 <img
